--- a/extension/static/index.html
+++ b/extension/static/index.html
@@ -1,19 +1,36 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="./styles.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-        <script src="./script.js" defer></script>
+  <head>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <script src="./script.js" defer></script>
+  </head>
+  <body class="bg-gray-800 text-white m-3 w-[400px]">
+    <div>
+      <p class="text-center my-2 text-3xl">anishot_</p>
+    </div>
+    <div>
+      <div class="h-0.5 m-2 rounded-md bg-green-300"></div>
 
-    </head>
-    <body class="bg-gray-800 text-white m-3 w-[400px]">
-        <div>
-            <p class="text-center my-2 text-3xl">anishot_</p>
-        </div>
-        <div>
-            <label class="align-top" for="captureFull">Capture full page</label>
-            
-            <input id="captureFull" class="align-middle" type="checkbox"> 
-            <button id="screenshotBtn" class="bg-green-300 hover:bg-green-500 mt-2 py-2 w-full text-black rounded font-bold">Take Screenshot</button>
-        </div>
-    </body>
+      <input id="allowWatermark" class="align-middle" type="checkbox" />
+      <label class="align-top" for="allowWatermark">Allow watermark</label>
+      <br />
+      <input id="captureFull" class="align-middle" type="checkbox" />
+      <label class="align-top" for="captureFull">Capture full page</label>
+      <button
+        id="screenshotBtn"
+        class="bg-green-300 hover:bg-green-500 mt-2 py-2 w-full text-black rounded font-bold"
+      >
+        Take Screenshot
+      </button>
+    </div>
+    <div class="text-center">
+      <div class="h-0.5 m-2 rounded-md bg-gray-600"></div>
+      <a href="https://github.com/externref/anishot"
+        ><i class="bi bi-github align-middle"></i> Source on Github</a
+      >
+    </div>
+  </body>
 </html>
