fix font size in watermark

--- a/extension/static/index.html
+++ b/extension/static/index.html
@@ -14,7 +14,7 @@
     <div>
       <div class="h-0.5 m-2 rounded-md bg-green-300"></div>
 
-      <input id="allowWatermark" class="align-middle" type="checkbox" />
+      <input id="allowWatermark" class="align-middle" type="checkbox" checked="true" />
       <label class="align-top" for="allowWatermark">Allow watermark</label>
       <br />
       <input id="captureFull" class="align-middle" type="checkbox" />
